# MLfromZERO

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.gpu  README.md  requirements.txt  機械学習勉強会2025実施計画.md
.devcontainer/: devcontainer.json
chapter1/src/: main.rs
rust_projects/: Cargo.toml
slides/: my_emoji.typ
slides/Week1/: week1.typ
